# script-languages

./: .current_gitmodules  .dockerignore  .gitattributes  .gitignore  .gitmodules  .travis.yml  1  Dockerfile  LICENSE  Makefile  Pipfile  README.md  SECURITY.md  build  build.py  build_config.json  clean  clean.py  contributing.md  debug  error_code_config.yml  exaslct  export  find_duplicate_error_codes.sh  find_error_codes.sh  find_highest_error_codes_per_module.sh  find_incomplete_error_codes.sh  find_next_error_code_per_module.sh  generic-r-vs-python3-test-comparison.md  install_or_update_exaslct.sh  luigi.cfg.template  noxfile.py  pipenv_utils.sh  print_secret.py  push.py  pyproject.toml  release.py  run_all_exaslct_tests.sh  run_exaslct_test.sh  script_client.proto  (+12 more)
.github/: markdown_check_config.json
exaudfclient/: .bazelrc  .env.template  .gitignore  BUILD  Dockerfile  MODULE.bazel  README.md  bazel-exaudfclient  build.sh  build_local_all.sh  exa_lib_loader.cc  exa_lib_loader.h  exa_parser_cfg.cc  exa_parser_cfg.h  exa_set_env.cc  exa_udf_base.cpp  exa_udf_base.h  exa_udf_clients.cpp  exa_udf_clients.h  exa_udfclient.cc  exa_vm_factory.cc  exa_vm_factory.h  exaudfclient.cc  run.sh  run_local.sh  variables.bzl  visualize_all.sh
exaudfclient/base/: .bazelrc  .gitignore  BUILD  MODULE.bazel  README.md  WORKSPACE  add_encoding_decoding.py  base.MODULE.bazel  bazel-base  build.sh  build_integrated.py  build_local.sh  build_local_all.sh  create_binary_wrapper.sh  create_binary_wrapper_stdout_to_bucketfs.sh  create_binary_wrapper_valgrind.sh  create_binary_wrapper_valgrind_massif.sh  debug_message.h  debug_udfclient_wrapper_runner.sh  debug_udfclient_wrapper_valgrind_massif.sh  exaudfclient.cc  exaudfclient.template.sh  exaudflib_complete.cc  filter_swig_code.py  java_repository.bzl  load_dynamic.cc  protobuf_repository.bzl  python_repository.bzl  replace_swig_import_helper.py  run_local.sh  ssl_repository.bzl  variables.bzl  visualize_all.sh  visualize_deps.sh  zmq_repository.bzl
exaudfclient/base/benchmark_container/: BUILD  benchmark_container.cc  benchmark_container.h
exaudfclient/base/cpp_emit_benchmark/: BUILD  cpp_emit_benchmark_container.cc  cpp_emit_benchmark_container.h
exaudfclient/base/cpp_emit_benchmark_container/: cpp_emit_benchmark_container.cc  cpp_emit_benchmark_container.h
exaudfclient/base/debug_udfclient_wrapper_scripts/: debug_udfclient_wrapper_stdouterr_to_bucketfs.sh  debug_udfclient_wrapper_valgrind_massif.sh  debug_udfclient_wrapper_valgrind_memcheck.sh
exaudfclient/base/docs/: exaudfclient.drawio
exaudfclient/base/exaudf/: BUILD  base.MODULE.bazel  build_integrated.py  create_binary_wrapper.sh  create_binary_wrapper_stdout_to_bucketfs.sh  create_binary_wrapper_valgrind.sh  exaudfclient.cc  filter_swig_code.py  load_dynamic.cc  variables.bzl  zmq_repository.bzl
exaudfclient/base/exaudf/benchmark_container/: BUILD  benchmark_container.cc  benchmark_container.h
exaudfclient/base/exaudf/exaudflib/: BUILD  exascript.i
exaudfclient/base/exaudf/javacontainer/: BUILD  ExaMetadataImpl.java  ExaStackTraceCleaner.java  javacontainer.cc  javacontainer.h  javacontainer_impl.cc  javacontainer_impl.h
exaudfclient/base/exaudf/python/: pythoncontainer.cc  pythoncontainer.h
exaudfclient/base/exaudf/streaming_container/: BUILD
exaudfclient/base/exaudflib/: BUILD  exascript.i  exaudflib.cc  exaudflib.h  exaudflib_main.cc  exaudflib_main.h  load_dynamic.h  scriptoptionlines.cc  socket_high_level.h  udf_plugin_interface.h  zmqcontainer.proto
exaudfclient/base/exaudflib/exascript/: exascript.i  script_data_transfer_objects_test.cpp
exaudfclient/base/exaudflib/impl/: check.cc  check.h  exaudflib_check.cc  exaudflib_check.h  exaudflib_global.cc  exaudflib_global.h  exaudflib_main.cc  exaudflib_msg_conversion.cc  exaudflib_msg_conversion.h  exaudflib_socket_high_level.cc  exaudflib_socket_low_level.cc  exaudflib_socket_low_level.h  global.cc  global.h  msg_conversion.cc  msg_conversion.h  socket_high_level.cc  socket_info.cc  socket_info.h  socket_low_level.cc  socket_low_level.h
exaudfclient/base/javacontainer/: BUILD  ExaCompiler.java  ExaConnectionInformationImpl.java  ExaExportSpecification.java  ExaImportSpecificationImpl.java  ExaIterationException.java  ExaIteratorImpl.java  ExaMetadata.java  ExaMetadataImpl.java  ExaStackTraceCleaner.java  ExaUDFException.java  ExaUndefinedSingleCallException.java  ExaWrapper.java  javacontainer.cc  javacontainer.h  javacontainer_builder.cc  javacontainer_builder.h  javacontainer_impl.cc  javacontainer_impl.h
exaudfclient/base/python/: BUILD  exascript_python_preset_core.py  exascript_python_wrap.py  extend_exascript_python_preset_py.sh  pythoncontainer.cc  pythoncontainer.h
exaudfclient/base/script_options_parser/: BUILD  exception.h  script_option_lines.cc  scriptoptionlines_ctpg.cc  scriptoptionlines_ctpg.h
exaudfclient/base/streaming_container/: BUILD  streamingcontainer.h
exaudfclient/base/swig_factory/: BUILD  swig_factory.h  swig_factory_impl.cc  swig_factory_impl.h
exaudfclient/base/utils/: BUILD  debug_message.h  exceptions.h
exaudfclient/docs/: java_script_options_parser.drawio  script_options_design.md  script_options_requirments.md
exaudfclient/exa_common/: exa_lib_loader.cc  exa_set_env.h  exa_udf_base.c  exa_udf_base.cpp  exa_udf_base.h  exa_udf_client.cc  exa_udf_clients.cpp  exa_udf_clients.h  exa_vm_factory.cc
exaudfclient/exa_udfclient_binary_common/: exa_lib_loader.h  exa_set_env.cc  exa_udf_base.cc  exa_udf_client.cc  exa_vm_factory.cc  exa_vm_factory.h
exaudfclient/src/: LICENSE-exasol-script-api.txt  build_client.sh  exascript.i  exascript.i~  exascript_java_jni_decl.h  exascript_python_preset.py  filter_swig_code.py  javacontainer.cc  pythoncontainer.cc  script_data_transfer_objects.cc  scriptoptionlines.h  swigcontainers.h  zmqcontainer.proto  zmqcontainerclient.cc
exaudfclient/src/javacontainer/: ExaConnectionAccessException.java  ExaIterator.java  ExaWrapper.java
scripts/generate_package_diffs_for_flavors/: generate_package_diffs_for_flavors.py  pyproject.toml
(+2256 files in other folders)
