[project]
name = "exasol-script-languages"
version = "9.5.0"
description = "Script Languages"

license = "MIT"

authors = [
    { name="Torsten Kilias", email="Torsten Kilias <torsten.kilias@exasol.com>" },
    { name="Thomas Uebensee", email="Thomas Uebensee <ext.thomas.uebensee@exasol.com>" }
]

readme = 'README.md'  # Markdown files are supported

keywords = ['exasol', 'udf', 'script-languages']

[tool.poetry]

packages = [
    {include = "README.md"},
    {include = "LICENSE"},
    {include = "exasol"},
]

[project.urls]
repository = "https://github.com/exasol/script-languages"
homepage = "https://github.com/exasol/script-languages"


[tool.poetry.dependencies]
python = ">=3.10,<4"
exasol-script-languages-container-tool = "^3.1.0"
#exasol-script-languages-container-ci = {path="/home/thomas/Work/script-languages-container-ci/dist/exasol_script_languages_container_ci-1.8.0-py3-none-any.whl"}
exasol-script-languages-container-ci = {git="https://github.com/exasol/script-languages-container-ci", branch="feature/75_implement_ci_for_gh_workflows"}
exasol-script-languages-container-ci-setup = "^1.8.0"

[tool.poetry.group.dev.dependencies]
toml = ">=0.10.2"
gitpython = ">=3.1.0"
nox = ">=2022.8.7"

[build-system]
requires = ["poetry_core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
