[project]
name = "exasol-script-languages"
version = "9.7.0"
description = "Script Languages"

license = "MIT"

requires-python = ">=3.10, <4.0"

authors = [
    { name="Torsten Kilias", email="Torsten Kilias <torsten.kilias@exasol.com>" },
    { name="Thomas Uebensee", email="Thomas Uebensee <ext.thomas.uebensee@exasol.com>" }
]

readme = 'README.md'  # Markdown files are supported

keywords = ['exasol', 'udf', 'script-languages']


dependencies = [
"exasol-script-languages-container-tool (>=3.3.0, <4.0.0)",
"exasol-script-languages-container-ci (>=4.0.0, <5.0.0)",
"exasol-script-languages-container-ci-setup (>=3.3.1, <4.0.0)",
]


[tool.poetry]

package-mode = false

[project.urls]
repository = "https://github.com/exasol/script-languages"
homepage = "https://github.com/exasol/script-languages"


[tool.poetry.group.dev.dependencies]
toml = ">=0.10.2"
gitpython = ">=3.1.0"
nox = ">=2022.8.7"

[build-system]
requires = ["poetry_core>=2.1.0"]
build-backend = "poetry.core.masonry.api"
