module(name="exaudfclient", version = "1.0")

bazel_dep(name = "exaudfclient_base", version = "1.0.0")
#For now, the Bazel Modul "exaudfclient_base" is stored in subdirectory "base".
#Later we might fetch it via Http or Git (after splitting up script-languages repository)
local_path_override(module_name="exaudfclient_base", path="base")
bazel_dep(name = "rules_jvm_external", version = "6.2")

numpy_local_repository = use_repo_rule("@exaudfclient_base//:python_repository.bzl", "numpy_local_repository")
numpy_local_repository(name = "numpy")

python_local_repository = use_repo_rule("@exaudfclient_base//:python_repository.bzl", "python_local_repository")
python_local_repository(name = "python3", python_version="python3")

zmq_local_repository = use_repo_rule("@exaudfclient_base//:zmq_repository.bzl", "zmq_local_repository")
zmq_local_repository(name = "zmq")

protobuf_local_repository = use_repo_rule("@exaudfclient_base//:protobuf_repository.bzl", "protobuf_local_repository")
protobuf_local_repository(name = "protobuf")

java_local_repository = use_repo_rule("@exaudfclient_base//:java_repository.bzl", "java_local_repository")
java_local_repository(name = "java")


maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "com.exasol:udf-api-java:1.0.5",
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(maven, "maven")
