module(name="exaudfclient_base", version = "1.0")

bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "googletest", version = "1.15.0")
bazel_dep(name = "rules_jvm_external", version = "6.2")
bazel_dep(name = "rules_python", version = "1.7.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.defaults(python_version = "3.11")
python.toolchain(python_version = "3.11", ignore_root_user_error = True,)


numpy_local_repository = use_repo_rule("@exaudfclient_base//:python_repository.bzl", "numpy_local_repository")
numpy_local_repository(name = "numpy")

python_local_repository = use_repo_rule("@exaudfclient_base//:python_repository.bzl", "python_local_repository")
python_local_repository(name = "python3", python_version="python3")

zmq_local_repository = use_repo_rule("@exaudfclient_base//:zmq_repository.bzl", "zmq_local_repository")
zmq_local_repository(name = "zmq")

protobuf_local_repository = use_repo_rule("@exaudfclient_base//:protobuf_repository.bzl", "protobuf_local_repository")
protobuf_local_repository(name = "protobuf")

java_local_repository = use_repo_rule("@exaudfclient_base//:java_repository.bzl", "java_local_repository")
java_local_repository(name = "java")
