[tool.poetry]
name = "generate_package_diffs_for_flavors"
version = "0.2.0"
description = ""
authors = ["Torsten Kilias <torsten.kilias@exasol.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0"
pandas = "^2.2.3"
tabulate = "^0.9.0"
click = "^8.0.1"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
